- Update Xen patches to 2.6.32.22 (bnc#633733, bnc#638807). - patches.xen/1026-blktap2-PG_reserved.patch: blktap2: eliminate bogus   clearing of PG_reserved (bnc#624814). - patches.xen/1027-lock-runqueue-xtime.patch: xen/x86: eliminate   nesting of run-queue locks inside xtime_lock. - patches.xen/1031-x86-privcmd-enoent.patch: xen/x86: make   __direct_remap_pfn_range()'s return value meaningful (FATE#310510). - patches.xen/1032-netback-add-sched-list-irqs.patch: xen: netback:   save interrupt state in add_to_net_schedule_list_tail. - patches.xen/1033-swiotlb-sync-bidirectional.patch: fix swiotlb sync   functions to properly deal with DMA_BIDIRECTIONAL. - patches.xen/xen-kzalloc: use kzalloc() in favor of   kmalloc()+memset(). - patches.xen/sfc-kzalloc: use kzalloc() in favor of   kmalloc()+memset(). - patches.xen/xen-blkfront-scsi_cmd_ioctl: blkfront: forward   unknown IOCTLs to scsi_cmd_ioctl for /dev/sdX (bnc#639944). - patches.xen/xen3-amd_nb_early_access_oops.patch: x86: AMD   Northbridge: Verify NB's node is online (bnc#637944). - patches.xen/xen3-revert-x86-don-t-send-sigbus-for-kernel-page-faults.patch:   Revert "x86: don't send SIGBUS for kernel page faults". - Update Xen config files.
suse-commit: 8f7d558b07609e080c663699deb43409f8425544

--- a/drivers/xen/Kconfig
+++ b/drivers/xen/Kconfig
@@ -4,6 +4,7 @@
 
 config XEN
 	bool
+	select NO_HZ
 	select IRQ_PER_CPU if SMP
 
 if XEN
@@ -385,9 +386,6 @@ config HAVE_IRQ_IGNORE_UNHANDLED
 
 config IRQ_PER_CPU
 	bool
-
-config NO_IDLE_HZ
-	def_bool y
 
 config XEN_SMPBOOT
 	def_bool y
