- Added patches.suse/oprofile-{001-050}*.patch (FATE#309728, BNC#686840) - Dropped patches.fixes/oprofile_bios_ctr.patch (obsoleted) - patches.xen/xen3-auto-common.diff: Refresh. - patches.xen/xen3-patch-2.6.24: Refresh. - patches.xen/xen3-patch-2.6.28: Refresh.
suse-commit: 0fb9cb4becf273ee498c0aa3c4e0611ec2d64978

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1136,7 +1136,7 @@ config DEFAULT_VM_DIRTY_RATIO
 	  Only use this if you really know what you are doing.
 
 config PROFILING
-	bool "Profiling support (EXPERIMENTAL)"
+	bool "Profiling support"
 	help
 	  Say Y here to enable the extended profiling support mechanisms used
 	  by profilers such as OProfile.
