- Update Xen patches to c/s 1089. - Update Xen config files. - patches.xen/xen3-block-Consolidate-phys_segment-and-hw_segment-limit.patch:   block: Consolidate phys_segment and hw_segment limits   (FATE#311054). - patches.xen/xen3-block-Rename-blk_queue_max_sectors-to-blk_queue_max.patch:   block: Rename blk_queue_max_sectors to blk_queue_max_hw_sectors   (FATE#311054). - patches.xen/xen3-mm-pagealloc-free_pages_prepare.patch: mm:   introduce free_pages_prepare() (Page allocator enhancements   suitable for THP(fate #311931)). - patches.xen/xen3-mm-thp-add-pmd-mangling-x86.patch: thp:   add pmd mangling functions to x86 (THP core (fate #311931)). - patches.xen/xen3-mm-thp-config.patch: thp:   CONFIG_TRANSPARENT_HUGEPAGE (THP core (fate #311931)). - patches.xen/xen3-oprofile-001-percpu-make-percpu-symbols-in-unique.patch:   percpu: make percpu symbols in oprofile unique (FATE#309728,   FATE#309730, BNC#686840). - Refresh other Xen patches.
suse-commit: 50258631cdfea1fba2a2fc8707684150909281bd

--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -191,7 +191,7 @@ config MIGRATION
 
 config TRANSPARENT_HUGEPAGE
 	bool "Transparent Hugepage Support"
-	depends on X86 && MMU
+	depends on X86 && !XEN && MMU
 	select COMPACTION
 	help
 	  Transparent Hugepages allows the kernel to use huge pages and
