--- a/init/Kconfig
+++ b/init/Kconfig
@@ -885,6 +885,7 @@ config ELF_CORE
 config PCSPKR_PLATFORM
 	bool "Enable PC-Speaker support" if EMBEDDED
 	depends on ALPHA || X86 || MIPS || PPC_PREP || PPC_CHRP || PPC_PSERIES
+	depends on !XEN_UNPRIVILEGED_GUEST
 	default y
 	help
           This option allows to disable the internal PC-Speaker
