- patches.suse/cgroup-implement-eventfd-based-generic-API-for-notif.patch:   cgroup: implement eventfd-based generic API for notifications   (fate#312042). - patches.suse/memcg-fix-oom-kill-behavior.patch: memcg: fix   oom kill behavior (fate#312042). - patches.suse/memcg-oom-kill-disable-and-oom-status.patch:   memcg: oom kill disable and oom status (fate#312042). - patches.suse/memcg-oom-notifier.patch: memcg: oom notifier   (fate#312042). - patches.suse/memcg-oom-wakeup-filter.patch: memcg: oom wakeup   filter (fate#312042). - patches.suse/memcg-skip-charging-if-fatal-signal-is-pending.patch:   memcg: Do not charge if current is going to die (fate#312042).
suse-commit: f5ceaac883e1a5eaba4650d87c81965bb3efed47

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -470,6 +470,7 @@ config HAVE_UNSTABLE_SCHED_CLOCK
 menuconfig CGROUPS
 	boolean "Control Group support"
 	default n if KERNEL_DESKTOP
+	depends on EVENTFD
 	default y
 	help
 	  This option adds support for grouping sets of processes together, for
