--- a/mm/Makefile
+++ b/mm/Makefile
@@ -14,6 +14,7 @@ obj-y			:= filemap.o mempool.o oom_kill.o fadvise.o \
 			   prio_tree.o util.o mmzone.o vmstat.o backing-dev.o \
 			   page_isolation.o mm_init.o mmu_context.o percpu.o \
 			   $(mmu-y)
+obj-$(CONFIG_VMA_CACHE)	+= vmacache.o
 obj-y += init-mm.o
 
 ifdef CONFIG_NO_BOOTMEM
